# hephaestus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  app.cpp  env.sh  libraries.mk  notes.drawio  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-release.yml  build-linux.yml  build-windows.yml  linux_build.yml  release.yml
doc/: README.md  delegate.md  events.md  notes.drawio  template.md  vulkan.md
editor/: CMakeLists.txt  main.cpp
editor/src/: debug_panel.hpp  scene_hierarchy_panel.hpp
engine/: CMakeLists.txt  Makefile  README.md  config.mk  version.mk
engine/core/: Makefile  hephaestus.cpp  hephaestus.hpp  test.cpp  test.hpp
engine/debug/: Makefile  main.cpp
engine/include/: alphane  application.hpp  components.hpp  frame_info.hpp  key_codes.hpp  key_event.hpp  panel.hpp  scene.hpp  shader.hpp  types.hpp
engine/src/: application.cpp  buffer.cpp  buffer.hpp  device.cpp  device.hpp  event.hpp  frame.cpp  frame.hpp  imgui_render_system.cpp  imgui_render_system.hpp  model.cpp  model.hpp  panel.cpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene_manager.cpp  scene_manager.hpp  shader.cpp  swapchain.cpp  swapchain.hpp  ui_manager.cpp  ui_manager.hpp  window.cpp  window.hpp
engine/src/descriptors/: descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  descriptor_writer.cpp  descriptor_writer.hpp
engine/src/render_systems/: quad_render_system.cpp  quad_render_system.hpp  scene_render_system.cpp  scene_render_system.hpp
engine/src/shaders/: quad_frag.h  quad_vert.h  scene.vert  scene2d.internal.vert
engine/src/systems/: basic_render_system.cpp  basic_render_system.hpp  shader_art_render_system.cpp  shader_art_render_system.hpp
engine/src/util/: delegate.hpp  logger.hpp
engine/test/: Makefile  test.cpp
engine/util/: logger.hpp  types.hpp  util.hpp
engine/vulkan/: Makefile  device.cpp  device.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
engine/vulkan_plugin/: Makefile  device.cpp  device.hpp  pipeline.cpp  pipeline.hpp  plugin.hpp  renderer.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
include/: hephaestus
include/hep/: application.hpp  engine.hpp  hephaestus.hpp
include/hephaestus/: engine.hpp
legacy/: Makefile  config.mk  hephaestus.cpp  hephaestus.hpp
legacy/vulkan_plugin/: device.cpp  pipeline.cpp  pipeline.hpp  renderer.cpp  swapchain.hpp
shaders/: compile.sh  triangle.frag  triangle.h  triangle.vert
src/: application.cpp  basic_render_system.cpp  basic_render_system.hpp  buffer.cpp  buffer.hpp  delegate.hpp  device.cpp  device.hpp  engine.cpp  engine.hpp  event.hpp  frame.cpp  hephaestus.cpp  key_codes.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  shader.cpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
src/core/: device.cpp  device.hpp  swapchain.hpp  window.cpp  window.hpp
src/descriptors/: descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  descriptor_writer.cpp  descriptor_writer.hpp
src/events/: event.hpp  key_event.hpp
src/input/: key_event.hpp
src/rendering/: buffer.cpp  buffer.hpp  frame.cpp  frame.hpp  frame_info.hpp  model.hpp  renderer.hpp
src/rendering/core/: pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
src/rendering/descriptors/: descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  descriptor_writer.cpp  descriptor_writer.hpp
src/systems/: basic_render_system.hpp  shader_art_render_system.cpp  shader_art_render_system.hpp
src/ui/: ui_component.hpp  ui_system.cpp  ui_system.hpp
src/ui/components/: debug_overlay.hpp  imgui_demo_window.hpp  shader_art.hpp
src/util/: check_result.hpp  logger.hpp  types.hpp  utils.hpp
testapp/: Makefile  app.cpp
testapp/shaders/: shader.frag
testbed/: CMakeLists.txt  main.cpp
testbed/shaders/: art.frag  triangle.frag
